@@ -1,5 +1,6 @@
 2010-xx-xx:
     * version 2.4
+    * Fix hints display on some pages like stackoverflow (thanks Jez)
     * Fix relative paths in :cd
     * Support rich text editor written by HTML.
       mode is into editing mode (INSERT, TEXTAREA, VISUAL) if the focused window is editable.
